--- a/templates/default/logging.conf
+++ b/templates/default/logging.conf
@@ -2,10 +2,10 @@
 keys = root, nova
 
 [handlers]
-keys = stderr, stdout, watchedfile, syslog, null
+keys = stderr, file, null
 
 [formatters]
-keys = legacynova, default
+keys = nova
 
 [logger_root]
 level = WARNING
@@ -13,7 +13,7 @@ handlers = null
 
 [logger_nova]
 level = INFO
-handlers = stderr
+handlers = stderr, file
 qualname = nova
 
 [logger_amqplib]
@@ -25,9 +25,6 @@ qualname = amqplib
 level = WARNING
 handlers = stderr
 qualname = sqlalchemy
-# "level = INFO" logs SQL queries.
-# "level = DEBUG" logs SQL queries and results.
-# "level = WARNING" logs neither.  (Recommended for production systems.)
 
 [logger_boto]
 level = WARNING
@@ -44,33 +41,20 @@ level = WARNING
 handlers = stderr
 qualname = eventlet.wsgi.server
 
-[handler_stderr]
-class = StreamHandler
-args = (sys.stderr,)
-formatter = legacynova
-
-[handler_stdout]
-class = StreamHandler
-args = (sys.stdout,)
-formatter = legacynova
-
-[handler_watchedfile]
-class = handlers.WatchedFileHandler
-args = ('nova.log',)
-formatter = legacynova
-
-[handler_syslog]
-class = handlers.SysLogHandler
-args = ('/dev/log', handlers.SysLogHandler.LOG_USER)
-formatter = legacynova
-
 [handler_null]
 class = nova.openstack.common.log.NullHandler
-formatter = default
 args = ()
+formatter = nova
 
-[formatter_legacynova]
-class = nova.openstack.common.log.LegacyFormatter
+[handler_stderr]
+class = StreamHandler
+args = (sys.stderr,) 
+formatter = nova
 
-[formatter_default]
-format = %(message)s
+[handler_file]
+class = handlers.WatchedFileHandler
+args = ("<%= node["nova"]["logging.conf"]["logfile"] %>",)
+formatter = nova
+
+[formatter_nova]
+class = <%= node["nova"]["logging.conf"]["formatter"] %>
